# unmux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pixi.toml
.github/workflows/: ci.yml
src/: main.rs
src/lib/: demux.rs  extract.rs  fanout.rs  grammar.rs  input.rs  iupac.rs  matcher.rs  metrics.rs  mod.rs  output.rs  qc.rs  tags.rs  writer.rs
tests/: comment_tags.rs  cucumber.rs  fuzz.rs  stdin.rs
tests/features/: both-strands-subs-partial.feature  cli.feature  comment-tags.feature  demux.feature  empty-inputs.feature  end-to-end.feature  extract.feature  formats.feature  grammar.feature  groups-sequential.feature  locations.feature  matching.feature  provenance.feature  routing.feature  tags.feature  trimming.feature
